Bug 1587557: When activating an HTML text field via a11y APIs, if it already has focus, simulate a click. r=MarcoZ

Previously, HTMLTextFieldAccessible::DoAction just called TakeFocus().
When the field already has focus, TakeFocus() will do nothing.
However, the user might be activating this element because they dismissed a touch keyboard and want to bring it back.
Therefore, we must simulate a click so Gecko will bring up the keyboard.

Differential Revision: https://phabricator.services.mozilla.com/D54106